2018-11-23 Franz Holzinger <franz@ttproducts.de>

    * move locallang.xml -> Resources/Private/Language/locallang.xlf and Resources/Private/Language/de.locallang.xlf
    * move locallang_ajax.xml -> Resources/Private/Language/locallang_ajax.xlf
    * move locallang_db.xml -> Resources/Private/Language/locallang_tca.xlf
    * move pi1/locallang.xml -> Resources/Private/Language/locallang_be.xlf
    * move static/Ratings/constants.txt -> Configuration/TypoScript/constants.txt
    * move static/Ratings/setup.txt -> Configuration/TypoScript/setup.txt
    * extract the file tt_content.php from ext_tables.php
    * extract the file tt_news.php from ext_tables.php
    * move icon_tx_ratings_data.gif -> Resources/Public/Icons/icon_tx_ratings_data.gif
    * move icon_tx_ratings_iplog.gif -> Resources/Public/Icons/icon_tx_ratings_iplog.gif
    * add the EidRunner.php script
    * extract the files tx_ratings_iplog.php from ext_tables.php and tca.php
    * extract the files tx_ratings_data.php from ext_tables.php and tca.php
    * Replace t3lib_extMgm by \TYPO3\CMS\Core\Utility\ExtensionManagementUtility
    * deprecation: Do not call t3lib_div::loadTCA.
    * deprecation: Do not require t3lib_extMgm::isLoaded("tt_news") in ext_localconf.php.
    * Ready for TYPO3 7 and 8
    * Remove the modfunc1 backend module which had no functionality.
    * Replace the variable $_EXTKEY by 'ratings' because this variable will not be supported by TYPO3 in the future.

2018-11-22 Franz Holzinger <franz@ttproducts.de>

    * move class.tx_ratings_ajax.php -> Classes/Api/Ajax.php
    * move class.tx_ratings_api.php -> Classes/Api/Api.php
    * move class.tx_ratings_ttnews.php -> Classes/Api/TtNews.php
	* New marker: add the marker ###RATING_VALUE###
	* New extension comment: TYPO3 mailinglists are not used so often. It is better to be notified by typo3.slack.com.

2014-03-19 v2.0.3 Leonie Philine Bitto <leonie@netcreators.nl>
