@@ -1,4 +1,7 @@
 <?php
+
+namespace Netcreators\Ratings\Api;
+
 /***************************************************************
 *  Copyright notice
 *
@@ -22,6 +25,8 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
+use TYPO3\CMS\Core\Utility\GeneralUtility;
+
 /**
  * This clas provides hook to tt_news to add extra markers.
  *
@@ -29,46 +34,40 @@
  * @package TYPO3
  * @subpackage comments
  */
-class tx_ratings_ttnews {
-	/**
-	 * Processes comments-specific markers for tt_news
-	 *
-	 * @param	array		$markerArray	Array with merkers
-	 * @param	array		$row	tt_news record
-	 * @param	array		$lConf	Configuration array for current tt_news view
-	 * @param	tx_ttnews	$pObj	Reference to parent object
-	 * @return	array		Modified marker array
-	 */
-	public function extraItemMarkerProcessor(array &$markerArray, array &$row, &$lConf, &$pObj) {
-		/* @var $pObj tx_ttnews */
-		if ($row['tx_ratings_enable']) {
-			$apiObj = t3lib_div::makeInstance('tx_ratings_api');
-			$conf = $apiObj->getDefaultConfig();
-			$conf['includeLibs'] = 'EXT:ratings/pi1/class.tx_ratings_pi1.php';
-			$conf['ref'] = 'tt_news_' . $row['uid'];
+class TtNews {
+    /**
+    * Processes comments-specific markers for tt_news
+    *
+    * @param	array		$markerArray	Array with merkers
+    * @param	array		$row	tt_news record
+    * @param	array		$lConf	Configuration array for current tt_news view
+    * @param	tx_ttnews	$pObj	Reference to parent object
+    * @return	array		Modified marker array
+    */
+    public function extraItemMarkerProcessor(array &$markerArray, array $row, $lConf, $pObj) {
+        /* @var $pObj tx_ttnews */
+        if ($row['tx_ratings_enable']) {
+            $apiObj = t3lib_div::makeInstance('tx_ratings_api');
+            $conf = $apiObj->getDefaultConfig();
+            $conf['includeLibs'] = 'EXT:ratings/pi1/class.tx_ratings_pi1.php';
+            $conf['ref'] = 'tt_news_' . $row['uid'];
 
-			$cObj = t3lib_div::makeInstance('tslib_cObj');
-			/* @var $cObj tslib_cObj */
-			$cObj->start(array());
-			$markerArray['###TX_RATINGS###'] = $cObj->cObjGetSingle('USER_INT', $conf);
+            $cObj = GeneralUtility::makeInstance(\TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer::class);
+            /* @var $cObj \TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer */
+            $cObj->start(array());
+            $markerArray['###TX_RATINGS###'] = $cObj->cObjGetSingle('USER_INT', $conf);
 
-			$cObj = t3lib_div::makeInstance('tslib_cObj');
-			/* @var $cObj tslib_cObj */
-			$cObj->start(array());
-			$conf['mode'] = 'static';
-			$markerArray['###TX_RATINGS_STATIC###'] = $cObj->cObjGetSingle('USER_INT', $conf);
-		}
-		else {
-			$markerArray['###TX_RATINGS###'] = '';
-			$markerArray['###TX_RATINGS_STATIC###'] = '';
-		}
-		return $markerArray;
-	}
+            $cObj = GeneralUtility::makeInstance(\TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer::class);
+            /* @var $cObj \TYPO3\CMS\Frontend\ContentObject\ContentObjectRenderer */
+            $cObj->start(array());
+            $conf['mode'] = 'static';
+            $markerArray['###TX_RATINGS_STATIC###'] = $cObj->cObjGetSingle('USER_INT', $conf);
+        }
+        else {
+            $markerArray['###TX_RATINGS###'] = '';
+            $markerArray['###TX_RATINGS_STATIC###'] = '';
+        }
+        return $markerArray;
+    }
 }
 
-if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ratings/class.tx_ratings_ttnews.php']) {
-	/** @noinspection PhpIncludeInspection */
-	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ratings/class.tx_ratings_ttnews.php']);
-}
-
-?>
